--- a/app/src/main/res/layout/fragment_main_tab3.xml
+++ b/app/src/main/res/layout/fragment_main_tab3.xml
@@ -4,6 +4,7 @@
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     android:orientation="vertical"
     tools:context=".ui.main.MainTab3Fragment">
     <Button
